2011-04-21  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Dan Bernstein.

        REGRESSION: Korean encoding alias KSC5601 does not work
        https://bugs.webkit.org/show_bug.cgi?id=59075
        <rdar://problem/9303233>

        * platform/text/TextCodecICU.cpp: (WebCore::TextCodecICU::registerEncodingNames): Added a
        KSC5601 alias for KSC_5601, which effectively makes it windows-949.

2011-04-20  Dominic Cooney  <dominicc@chromium.org>

        Reviewed by Dimitri Glazkov.

        layoutTestController can create and destroy shadow DOM
        https://bugs.webkit.org/show_bug.cgi?id=59058

        Test: fast/dom/shadow/layout-tests-can-access-shadow.html

        * WebCore.exp.in: Mac DRT needs to see Element::ensure/removeShadowRoot

2011-04-20  Pratik Solanki  <psolanki@apple.com>

        Reviewed by Ryosuke Niwa.

        Follow on fix for https://bugs.webkit.org/show_bug.cgi?id=58926

        Fix assertions in Chromium builds.

        * platform/graphics/Image.cpp:
        (WebCore::Image::drawTiled): Skia and Wx do not have proper implementations of
        BitmapImage::checkForSolidColor() so we shouldn't assert on those platforms.

2011-04-20  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        Reviewed by Eric Seidel.

        [EFL] Add timeline to mediaControlsEfl.css
        https://bugs.webkit.org/show_bug.cgi?id=58865

        Add timeline to mediaControlsEfl.css in order to show playing time of media
        content.

        * css/mediaControlsEfl.css:
        (audio):
        (audio::-webkit-media-controls-panel, video::-webkit-media-controls-panel):
        (audio::-webkit-media-controls-mute-button, video::-webkit-media-controls-mute-button):
        (audio::-webkit-media-controls-play-button, video::-webkit-media-controls-play-button):
        (audio::-webkit-media-controls-timeline-container, video::-webkit-media-controls-timeline-container):